@@ -14,6 +14,8 @@
 [fix] Kodi 19 not working
 [fix] remove LOGNOTICE AND LOGSEVERE, both removed in Kodi 19
 [fix] use xbmcvfs.translatePath when available
+[fix] mitigate busy dialog related crashes
+
         </news>
         <assets>
             <icon>icon.png</icon>
