@@ -2,6 +2,8 @@
 [fix] Kodi 19 not working
 [fix] remove LOGNOTICE AND LOGSEVERE, both removed in Kodi 19
 [fix] use xbmcvfs.translatePath when available
+[fix] mitigate busy dialog related crashes
+
 5.0.2
 [upd] Use new settings format on Kodi 19
 
